crates/apollo-compiler/test_data/diagnostics/0098_interface_extensions.txt
Error: duplicate definitions for the `name` field of interface type `UniqueNames`
   ╭─[0098_interface_extensions.graphql:5:3]
   │
 2 │   name: String
   │   ──┬─  
   │     ╰─── previous definition of `name` here
   │ 
 5 │   name: String
   │   ──────┬─────  
   │         ╰─────── `name` redefined here
───╯
Error: non-repeatable directive nonRepeatable can only be used once per location
    ╭─[0098_interface_extensions.graphql:14:29]
    │
 10 │ interface Directives @nonRepeatable {
    │                      ───────┬──────  
    │                             ╰──────── directive `@nonRepeatable` first called here
    │ 
 14 │ extend interface Directives @nonRepeatable
    │                             ───────┬──────  
    │                                    ╰──────── directive `@nonRepeatable` called again here
────╯
Error: type `Derived` does not satisfy interface `Base`: missing field `b`
    ╭─[0098_interface_extensions.graphql:21:1]
    │
 18 │       b: Int
    │       ───┬──  
    │          ╰──── `Base.b` originally defined here
    │ 
 21 │ ╭─▶ interface Derived {
    ┆ ┆   
 23 │ ├─▶ }
    │ │       
    │ ╰─────── add `b` field to this type
 24 │     extend interface Derived implements Base {
    │                                         ──┬─  
    │                                           ╰─── implementation of interface Base declared here
    │     
    │     Help: An object or interface must declare all fields required by the interfaces it implements
────╯

